updated readme to reflect changes. added more tags. added more examples. removed requiered fields on patch. Made some nouns plural
